Adding clear cart feature

--- a/Home.html
+++ b/Home.html
@@ -5991,6 +5991,7 @@
 
     <div id="mySidecart" class="sidecart" >
       <a href="#" onclick="closeCart()">&times;</a>
+      <a href="#" onclick="clearCart()">Clear All</a>
       <a href="#">Shopping Cart</a>
       <hr>
       <div id = "cartContent">
