Adding responsive temp fix

--- a/PRODUCTS.html
+++ b/PRODUCTS.html
@@ -6215,7 +6215,7 @@
                           </div>
                         </div>
                         <div class='product_info'>
-                          <div id='moen_name' class="product_name">Moen Shower Cabin</div>
+                          <div id='moen_name' class="product_name">Moen Cabin</div>
                           <div id='moen_price' class="product_price">$69,900</div>
                           <div type="button" class="btn btn-warning" onclick="addItemToCart('moen')">Add To Cart</div>
                         </div>
